k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
  namespace: highload
  labels:
    app: streaming-service
spec:
  type: ClusterIP
  selector:
    app: streaming-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
