k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-service
  namespace: highload
spec:
  ingressClassName: nginx
  rules:
    - host: streaming.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streaming-service
                port:
                  number: 80
